# algotune

./: generate_solutions.py  pyproject.toml
AlgoTuner/: main.py
AlgoTuner/config/: config.yaml  loader.py
AlgoTuner/interfaces/: llm_interface.py
AlgoTuner/messages/: single_shot_initial_system_message.txt
AlgoTuner/models/: lite_llm_model.py
AlgoTuner/tests/: test_single_shot_mode.py
AlgoTuner/utils/: hf_datasets.py  isolated_benchmark.py  serialization.py
baseline_codes/affine_transform_2d/: solver.py
baseline_codes/aircraft_wing_design/: solver.py
baseline_codes/base64_encoding/: solver.py
baseline_codes/battery_scheduling/: solver.py
baseline_codes/chacha_encryption/: solver.py
baseline_codes/channel_capacity/: solver.py
baseline_codes/chebyshev_center/: solver.py
baseline_codes/cholesky_factorization/: solver.py
baseline_codes/convex_hull/: solver.py
baseline_codes/convolve2d_full_fill/: solver.py
baseline_codes/convolve_1d/: solver.py
baseline_codes/correlate2d_full_fill/: solver.py
baseline_codes/correlate_1d/: solver.py
baseline_codes/count_riemann_zeta_zeros/: solver.py
baseline_codes/cumulative_simpson_multid/: solver.py
baseline_codes/cvar_projection/: solver.py
baseline_codes/cyclic_independent_set/: solver.py
baseline_codes/delaunay/: solver.py
baseline_codes/discrete_log/: solver.py
baseline_codes/dst_type_II_scipy_fftpack/: solver.py
baseline_codes/dynamic_assortment_planning/: solver.py
baseline_codes/earth_movers_distance/: solver.py
baseline_codes/edge_expansion/: solver.py
baseline_codes/eigenvalues_real/: solver.py
baseline_codes/eigenvectors_complex/: solver.py
baseline_codes/eigenvectors_real/: solver.py
baseline_codes/elementwise_integration/: solver.py
baseline_codes/feedback_controller_design/: solver.py
baseline_codes/fft_cmplx_scipy_fftpack/: solver.py
scripts/: algotune.py  algotune.sh  evaluate_results.py  submit_agent.sh
(+1280 files in other folders)
